# haveinet

./: Makefile  Makefile.in  README.md  README.md.in  configure  configure.ac  haveinet.sh  haveinet.sh.in
